# posman

./: README.md  meson.build  org.pos.manager.json
data/: meson.build  org.pos.manager.appdata.xml.in  org.pos.manager.desktop.in  org.pos.manager.gschema.xml  posman.gresource.xml
po/: LINGUAS  POTFILES  meson.build
src/: main.c  meson.build  posman-action-area.c  posman-action-area.h  posman-action-area.ui  posman-action-area.ui~  posman-action-bar.ui  posman-action-controler.c  posman-action-controler.h  posman-action-controler.ui  posman-action-menu-cmnd.c  posman-action-menu-cmnd.h  posman-action-menu-cmnd.ui  posman-action-menu-cust.c  posman-action-menu-cust.h  posman-action-menu-cust.ui  posman-action-menu.c  posman-action-menu.h  posman-action-menu.ui  posman-action-menu.ui~  posman-add-cmnd.c  posman-add-cmnd.h  posman-add-cmnd.ui  posman-add-payment.c  posman-add-payment.h  posman-add-payment.ui  posman-item-chooser.c  posman-item-chooser.h  posman-item-chooser.ui  posman-item-list-row.c  posman-item-list-row.h  posman-item-list-row.ui  posman-item.c  posman-item.h  posman-item.ui  posman-list-box-data.c  posman-list-box-data.h  posman-panel-list-row.c  posman-panel-list-row.h  posman-panel-list.c  (+15 more)
src/data/: create.sql  fill_action_area.sql  get_price.sql  get_price2.sql  posman.db.sql
